[gd_scene load_steps=4 format=3 uid="uid://c81pvpnoprh5o"]

[ext_resource type="Script" uid="uid://w6hbva02io7d" path="res://scripts/tetromino.gd" id="1_6m5ay"]
[ext_resource type="Texture2D" uid="uid://bo8f4ukvvpmr6" path="res://Assets/I_Tetromino.png" id="2_6m5ay"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6m5ay"]
size = Vector2(32, 32)

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource("1_6m5ay")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6m5ay")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_6m5ay")
region_enabled = true
region_rect = Rect2(76, 26, 32, 32)

[node name="fall_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="moveY_timer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="moveX_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RayDown" type="RayCast2D" parent="."]
position = Vector2(-1, 1)
scale = Vector2(2.69124, 1.42631)
target_position = Vector2(0, 28.7455)
collide_with_areas = true

[node name="RayRight" type="RayCast2D" parent="."]
rotation = 0.00231584
target_position = Vector2(30, -0.063)
collide_with_areas = true

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-30, 0)
collide_with_areas = true

[connection signal="timeout" from="fall_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="moveY_timer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="moveX_timer" to="." method="_on_move_x_timer_timeout"]
